# usb-camera-stream-py

./: README.md  pyproject.toml
usb_camera_stream_py/: _app.py  app.py  websocket_stream.py
usb_camera_stream_py/templates/: index.html  websocket_stream.html
